src/test/deca/context/valid/sansObjet/valid_include.deca
#include "Algos.deca"

{
    int x;
    int y;
}
