src/test/deca/context/invalid/sansObjet/BadFloatDeclaration.deca
{
    float x = 2020.0f;
    float y = 2020 + f;
}
